--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "@clickhouse/client": "^1.12.1",
     "@sqd-pipes/pipes": "^0.0.1-alpha.20",
-    "@subsquid/evm-typegen": "^4.4.0"
+    "@subsquid/evm-typegen": "^4.4.0",
+    "@subsquid/solana-stream": "^0.3.1"
   },
   "peerDependenciesMeta": {}
 }
