--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   },
   "dependencies": {
     "@clickhouse/client": "^1.12.1",
-    "@sqd-pipes/pipes": "^0.0.1-alpha.20",
+    "@sqd-pipes/pipes": "^0.0.1-alpha.25",
     "@subsquid/evm-typegen": "^4.4.0",
-    "@subsquid/solana-stream": "^0.3.1"
+    "@subsquid/solana-stream": "^0.3.1",
+    "better-sqlite3": "^12.4.1"
   },
   "peerDependenciesMeta": {}
 }
