--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@clickhouse/client": "^1.12.1",
     "@sqd-pipes/pipes": "^0.0.1-alpha.25",
+    "@subsquid/borsh": "^0.3.0",
     "@subsquid/evm-typegen": "^4.4.0",
     "@subsquid/solana-stream": "^0.3.1",
     "better-sqlite3": "^12.4.1"
