--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "rm -rf dist/ && tsc"
   },
   "devDependencies": {
+    "@types/node": "^24.8.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
   },
