--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   },
   "dependencies": {
     "@clickhouse/client": "^1.14.0",
-    "@subsquid/pipes": "^0.1.0-beta.6",
     "@subsquid/borsh": "^0.3.0",
-    "@subsquid/solana-stream": "^0.3.1"
+    "@subsquid/pipes": "^0.1.0-beta.6",
+    "@subsquid/solana-stream": "^0.3.1",
+    "better-sqlite3": "^12.4.5"
   },
   "peerDependenciesMeta": {}
 }
